# duckdb-onnx-extension

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
scripts/: setup-custom-toolchain.sh
src/: CMakeLists.txt  duckonnx_extension.cpp
src/core/: CMakeLists.txt  module.cpp
src/core/functions/scalar/: CMakeLists.txt  onnx_inference.cpp
src/core/optimizer/: CMakeLists.txt
src/core/optimizer/rules/: CMakeLists.txt  onnx_pruning.cpp  onnx_pushdown.cpp  onnx_skl2onnx.cpp
src/core/utils/: CMakeLists.txt  model_cache.cpp
src/include/: duckonnx_extension.hpp
src/include/duckonnx/: common.hpp
src/include/duckonnx/core/: module.hpp
src/include/duckonnx/core/functions/: scalar.hpp
src/include/duckonnx/core/optimizer/: duckonnx_optimizer.hpp
src/include/duckonnx/core/optimizer/rules/: onnx_pruning.hpp  onnx_pushdown.hpp  onnx_skl2onnx.hpp
src/include/duckonnx/core/utils/: model_cache.hpp
test/sql/: duckonnx.test
